# video-sharing-platform

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  LOCAL_SETUP.md  PLAN.md  README.md  TODO.md  compose.yml  dev.docker-compose.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  postman_collection.json  prod.compose.yml
media-handler/: .env.docker  .gitignore  Dockerfile  dev.dockerfile  go.mod  go.sum  gqlgen.yml  server.go
s3-service/: .env.docker  Dockerfile  dev.dockerfile  pom.xml
user-management/: .env.docker  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  dev.dockerfile  diesel.toml  docker-entrypoint.sh
user-management/src/: main.rs  schema.rs
user-management/src/controllers/: auth_controllers.rs  mod.rs  user_controller.rs
user-management/src/db/: init_db.rs
user-management/src/errors/: catchers.rs  custom_error.rs  mod.rs
user-management/src/migrations/2024-01-04-185442_users/: up.sql
user-management/src/migrations/2024-01-07-190759_roles/: up.sql
user-management/src/migrations/2024-01-07-191434_add_role_to_user/: down.sql  up.sql
user-management/src/models/: auth_model.rs  mod.rs  roles_model.rs  user_model.rs
user-management/src/routes/: mod.rs  user_route.rs
user-management/src/serializers/: mod.rs
user-management/src/utils/: hash_passwd.rs  jwt.rs  mod.rs  res_fmt.rs
video-processing/: .dockerignore  .env.docker  .eslintrc.json  .gitignore  Dockerfile  bucket-docker-entrypoint.sh  bucket.dockerfile  build.js  dev.dockerfile  index.ts  nodemon.json  package-lock.json  (+2 more)
(+119 files in other folders)
