[package]
name = "user-management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
serde = { version = "1.0.194", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
